--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -1,25 +1,16 @@
-name: .NET Core
+name: build
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push]
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.1.301
-    - name: Install dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
-    - name: Test
-      run: dotnet test --no-restore --verbosity normal
+    - uses: actions/checkout@v1
+    - uses: warrenbuckley/Setup-Nuget@v1
+    - run: nuget restore *.sln
+    - uses: warrenbuckley/Setup-MSBuild@v1
+    - run: MSBuild.exe *.sln -p:Configuration=Release
+      timeout-minutes: 5
