--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 #    - uses: warrenbuckley/Setup-Nuget@v1
-    - run: nuget restore *.sln
+    - run: nuget restore CSV-JSON-Converter.sln
 #    - uses: warrenbuckley/Setup-MSBuild@v1
-    - run: MSBuild.exe *.sln -p:Configuration=Release
+    - run: MSBuild.exe CSV-JSON-Converter.sln -p:Configuration=Release
       timeout-minutes: 5
